1.  转为hex时，如果可以简化，r/g/b/o参数为全写，非简化模式 2. 支持直接colorFormat()，避免每次new 3. 更新README.md，撰写相关使用文档 4. 添加转换原理的说明文档

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .container {
             width: 1000px;
-            margin: 50px auto;
+            margin: 30px auto;
             border-collapse: collapse;
             border-spacing: 0;
             border: 1px solid #ddd;
@@ -27,11 +27,17 @@
         .container tbody tr:even {
             background-color: #eee;
         }
+        .desc {
+            width: 1000px;
+            margin: 30px auto;
+        }
     </style>
     <script src="colorFormat.js"></script>
 </head>
 <body>
     <h1>颜色转换</h1>
+    <div class="desc">将颜色值转换为你需要的格式，现在仅支持浏览器支持的HEX/RGB/RGBA/HSL/HSLA等5种格式，任意格式之间互相转换。</div>
+    <div class="desc">可能颜色互转的时候有些微差距，这是由于js在小数计算时不够精确或者对数据进行了四舍五入导致的结果，不过转换的结果与在浏览器开发者工具中转换的结果保持一致。</div>
     <table class="container">
         <thead>
             <tr>
@@ -49,77 +55,77 @@
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "#ffffff", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#ffffff", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#ffffff", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#ffffff", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#ffffff", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#ffffff", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#ffffff", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#ffffff", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#ffffff", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#ffffff", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">#0080ff</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">#0080ff80</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff80", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff80", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff80", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff80", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "#0080ff80", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff80", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff80", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff80", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff80", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "#0080ff80", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">rgb(0,128,255)</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "rgb(0,128,255)", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgb(0,128,255)", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgb(0,128,255)", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgb(0,128,255)", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgb(0,128,255)", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgb(0,128,255)", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgb(0,128,255)", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgb(0,128,255)", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgb(0,128,255)", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgb(0,128,255)", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">rgba(0,128,255,0.5)</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "rgba(0,128,255,0.5)", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgba(0,128,255,0.5)", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgba(0,128,255,0.5)", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgba(0,128,255,0.5)", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "rgba(0,128,255,0.5)", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgba(0,128,255,0.5)", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgba(0,128,255,0.5)", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgba(0,128,255,0.5)", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgba(0,128,255,0.5)", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "rgba(0,128,255,0.5)", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">hsl(210,100%,50%)</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "hsl(210,100%,50%)", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsl(210,100%,50%)", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsl(210,100%,50%)", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsl(210,100%,50%)", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsl(210,100%,50%)", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsl(210,100%,50%)", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsl(210,100%,50%)", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsl(210,100%,50%)", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsl(210,100%,50%)", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsl(210,100%,50%)", format: "hsla"}).complete)</script></td>
             </tr>
             <tr>
                 <td colspan="6">hsla(210,100%,50%,0.5)</td>
             </tr>
             <tr>
                 <td></td>
-                <td><script>document.write(new colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hex"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsla(210,100%,50%,0.5)", format: "rgb"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsla(210,100%,50%,0.5)", format: "rgba"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hsl"}).complete)</script></td>
-                <td><script>document.write(new colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hsla"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsla(210,100%,50%,0.5)", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsla(210,100%,50%,0.5)", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "hsla(210,100%,50%,0.5)", format: "hsla"}).complete)</script></td>
             </tr>
         </tbody>
     </table>
