参数color支持`red`/`orange`/`yellow`/`green`/`cyan`/`blue`/`violet`/`black`/`white`

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
         </thead>
         <tbody>
             <tr>
+                <td colspan="6">red</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><script>document.write(colorFormat({color: "red", format: "hex"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "red", format: "rgb"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "red", format: "rgba"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "red", format: "hsl"}).complete)</script></td>
+                <td><script>document.write(colorFormat({color: "red", format: "hsla"}).complete)</script></td>
+            </tr>
+            <tr>
                 <td colspan="6">#ffffff</td>
             </tr>
             <tr>
